--- a/templates/sellcoins/index.html
+++ b/templates/sellcoins/index.html
@@ -4,12 +4,19 @@
 {% endblock %} {% block page %}
 <div class="row q-col-gutter-md">
   <div class="col-12 col-md-8 col-lg-7 q-gutter-y-md">
+    <q-card-section>
+      <h3 class="q-my-none">
+        SellCoins
+        <small>
+          sell {{LNBITS_DENOMINATION}} for <span v-text="settings.fiat"></span>
+        </small>
+      </h3>
     <q-card>
       <q-card-section>
         <div class="row">
-          <div class="col-md-4 col-sm-12">
+          <div class="col-md-5 col-sm-12">
             <q-select
-              class="q-pr-md"
+              class="q-pr-md q-pt-sm"
               filled
               dense
               v-model="settings.wallet_id"
@@ -17,9 +24,9 @@
               label="Wallet *"
             ></q-select>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-md-2 col-sm-12">
             <q-select
-              class="q-pr-md"
+              class="q-pr-md q-pt-sm"
               filled
               dense
               emit-value
@@ -30,7 +37,7 @@
           </div>
           <div class="col-md-4 col-sm-12">
             <q-input
-              class="q-pr-md"
+              class="q-pr-md q-pt-sm"
               filled
               dense
               v-model.trim="settings.stripe_key"
@@ -38,7 +45,17 @@
               placeholder="pk_test_51I4Z5..."
             ></q-input>
           </div>
-        </div>
+          <div class="col-md-1 col-sm-12">
+          <q-toggle
+          size="md"
+          v-model="settings.launch_page"
+          checked-icon="check"
+          color="green"
+          unchecked-icon="clear"
+          :disable="!settings.stripe_key && !settings.fiat && !settings.wallet_id"
+        ><q-tooltip>Launch page</q-tooltip></q-toggle>
+      </div>  
+      </div>
       </q-card-section>
     </q-card>
     <q-btn
@@ -47,22 +64,15 @@
       icon="add"
       round
       size="md"
+      class="q-mt-md"
       @click="show_product_form = true"
     ></q-btn>
     <q-card v-for="product in products">
       <span v-text="product.price"></span>
     </q-card>
   </div>
-  <div class="col-12 col-md-4 col-lg-5 q-gutter-y-md">
+  <div class="gt-sm col-12 col-md-4 col-lg-5 q-gutter-y-md">
     <q-card>
-      <q-card-section>
-        <h6 class="text-subtitle1 q-my-none">
-          {{SITE_TITLE}} SellCoins ({{LNBITS_DENOMINATION}})
-        </h6>
-        <p>
-          Sell {{LNBITS_DENOMINATION}} for <span v-text="settings.fiat"></span>
-        </p>
-      </q-card-section>
       <q-card-section class="q-pa-none">
         <q-separator></q-separator>
         <q-list>
@@ -90,19 +100,19 @@
           dense
           v-model.trim="product.title"
           label="Title"
-        ></q-input>
+        ><q-tooltip>Title for your product</q-tooltip></q-input>
         <q-input
           filled
           dense
           v-model.trim="product.description"
           label="Description"
-        ></q-input>
+        ><q-tooltip>Description for your product</q-tooltip></q-input>
         <q-input
           filled
           dense
           v-model.trim="product.price"
-          label="Price"
-        ></q-input>
+          :label="'Price ' + settings.fiat"
+        ><q-tooltip>How much you will sell your product for</q-tooltip></q-input>
         <div class="row">
           <div class="col">
             <q-toggle
@@ -112,8 +122,8 @@
             checked-icon="check"
             color="green"
             unchecked-icon="clear"
-            :label="product.auto_convert ? 'Auto-convert (on)' : 'Auto-convert (off)'"
-          ></q-toggle>
+            :label="product.auto_convert ? 'Auto-convert sats (on)' : 'Auto-convert sats (off)'"
+          ><q-tooltip>Will auto convert sats amount from your fiat price</q-tooltip></q-toggle>
           </div>
           <div class="col">
             
@@ -133,7 +143,7 @@
         dense
         v-model.trim="product.amount"
         label="Amount you want to sell"
-      ></q-input>
+      ><q-tooltip>Amount the user will recieve</q-tooltip></q-input>
 
         <div class="row q-mt-lg">
           <q-btn v-if="product.id" unelevated color="primary" type="submit"
