--- a/templates/sellcoins/_api_docs.html
+++ b/templates/sellcoins/_api_docs.html
@@ -1,3 +1,16 @@
+
+<q-card>
+  <q-card-section>
+    <p>
+      Grab your Stripe <a href="https://dashboard.stripe.com/test/apikeys">API key</a><br />
+      <small>
+        Created by,
+        <a class="text-secondary" href="https://github.com/arcbtc"
+          >Ben Arc</a
+        ></small
+      >
+    </p>
+  </q-card-section>
 <q-expansion-item
   group="extras"
   icon="swap_vertical_circle"
@@ -6,3 +19,4 @@
 >
   <q-btn flat label="Swagger API" type="a" href="../docs#/buy"></q-btn>
 </q-expansion-item>
+</card>
