--- a/templates/sellcoins/index.html
+++ b/templates/sellcoins/index.html
@@ -101,7 +101,7 @@
           filled
           dense
           v-model.trim="product.price"
-          label="Price"
+          :label="'Price ' + settings.fiat"
         ></q-input>
         <div class="row">
           <div class="col">
