--- a/templates/sellcoins/_sellcoins.html
+++ b/templates/sellcoins/_sellcoins.html
@@ -1,7 +1,7 @@
 <q-expansion-item group="extras" icon="info" label="More info">
   <q-card>
     <q-card-section>
-      <p>Some more info about my excellent extension.</p>
+      <p>Sell coins for cash</p>
       <small
         >Created by
         <a
